thymeleaf，统一异常，统一错误页

--- a/th-error/src/main/resources/templates/test.html
+++ b/th-error/src/main/resources/templates/test.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>[[${title}]]</title>
+    <title>[[${m}]]</title>
 </head>
 <body>
-[[${body}]]
+[[${o.a}]]
 </body>
 </html>
